Updating auth code claims
