# common/proto/rest/swagger.go
@@ -46,6 +46,32 @@ var SwaggerJson = `{
       }
     }
   },
+"responses": {
+    "401":{
+      "description":"User is not authenticated",
+      "schema":{
+        "$ref": "#/definitions/restError"
+      }
+    },
+    "403":{
+      "description":"User has no permission to access this particular resource",
+      "schema":{
+        "$ref": "#/definitions/restError"
+      }
+    },
+    "404":{
+      "description":"Resource does not exist in the system",
+      "schema":{
+        "$ref": "#/definitions/restError"
+      }
+    },
+    "500":{
+      "description":"An internal error occurred in the backend",
+      "schema":{
+        "$ref": "#/definitions/restError"
+      }
+    }
+  },
   "paths": {
     "/acl": {
       "post": {
@@ -5901,6 +5927,35 @@ var SwaggerJson = `{
           }
         }
       }
+    },
+    "restError": {
+      "type": "object",
+      "properties": {
+        "Code": {
+          "type": "string",
+          "title": "Unique ID of the error"
+        },
+        "Title": {
+          "type": "string",
+          "title": "Human-readable, short label"
+        },
+        "Detail": {
+          "type": "string",
+          "title": "Human-readable, longer description"
+        },
+        "Source": {
+          "type": "string",
+          "title": "Cells service name or other quickly useful info"
+        },
+        "Meta": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          },
+          "title": "Additional Metadata"
+        }
+      },
+      "title": "Generic error message"
     },
     "restError": {
       "type": "object",
